--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -316,7 +316,7 @@
           <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
           </div>
-          <div class="sidebar-brand-text mx-3">Game Zone</div>
+          <div class="sidebar-brand-text mx-3">Gamers Zone</div>
         </a>
         
         <!-- Divider -->
